--- a/features/Auth/login.html
+++ b/features/Auth/login.html
@@ -22,13 +22,18 @@
       <div class="form login">
         <div class="form-content">
           <header>Login</header>
-          <form action="#">
+          <form action="../main.html" method="GET">
             <div class="field input-field">
-              <input type="email" placeholder="Email" class="input" />
+              <input type="email" placeholder="Email" class="input" required />
             </div>
 
             <div class="field input-field">
-              <input type="password" placeholder="Password" class="password" />
+              <input
+                type="password"
+                placeholder="Password"
+                class="password"
+                required
+              />
               <i class="bx bx-hide eye-icon"></i>
             </div>
 
@@ -37,7 +42,7 @@
             </div>
 
             <div class="field button-field">
-              <button class="e-btn">Login</button>
+              <button type="submit" class="e-btn">Login</button>
             </div>
           </form>
 
@@ -64,7 +69,6 @@
       </div>
 
       <!-- Signup Form -->
-
       <div class="form signup">
         <div class="form-content">
           <header>Signup</header>
@@ -75,6 +79,7 @@
                 type="email"
                 placeholder="Email"
                 class="input"
+                required
               />
             </div>
 
@@ -84,6 +89,7 @@
                 type="password"
                 placeholder="Confirm password"
                 class="password"
+                required
               />
               <i class="bx bx-hide eye-icon"></i>
             </div>
@@ -119,7 +125,7 @@
     <!-- JavaScript -->
     <script src="login.js"></script>
     <script src="config.js"></script>
-    <!-- Firbase SDK -->
+    <!-- Firebase SDK -->
     <script type="module" src="firebaseLogin.js"></script>
   </body>
 </html>
