--- a/Website/features/bill.html
+++ b/Website/features/bill.html
@@ -57,7 +57,7 @@
 
 
       <div class="profile-img">
-        <img src="/images/6.png" alt="profile img">
+        <img src="/Website/images/6.png" alt="profile img">
       </div>
     </nav>
 
