--- a/Website/features/main.html
+++ b/Website/features/main.html
@@ -55,7 +55,7 @@
         </p>
 
         <div class="profile-img">
-          <img src="/images/6.png" alt="profile img" />
+          <img src="/Website/images/6.png" alt="profile img" />
         </div>
       </nav>
 
